# DALIGNER

./: .gitignore  DB.c  DB2Falcon.c  DBX.c  DBX.h  DBmap.c  GNUmakefile  HPCdaligner.c  LA4Falcon.c  LA4Ice.c  LAmerge.c  LAshow.c  LAsort.c  Makefile  README  bamboo_build.sh  daligner.c  filter.c  filter_p.c  meson.build
py_utils/: DAPI.py  DAPipe.py  DBLA_to_falcon.py  FALCON_ASM_NOTE  LAPI.py  LAPipe.py
subprojects/: dazzdb.wrap
